# history-of-ai

./: .gitignore  AGILE_FRAMEWORK.md  backlog.md  progress.md  pyproject.toml  readme.md
.cursor/rules/: create-new-sprint.mdc  update-progress.mdc  what-is-the-time.mdc
sprints/01_early-ai-1950s-1970s/: README.md
sprints/01_early-ai-1950s-1970s/code/: logic_theorist_demo.py  perceptron_demo.py  shakey_planning_demo.py  turing_test_demo.py
sprints/01_early-ai-1950s-1970s/docs/: explainer.md  figures.md  timeline.md
